# BrowserOS-grazie

./: LOCAL_BUILD_GUIDE.md  build_local.sh  continue_build.sh  quick_fix_build.sh
.github/workflows/: build-macos.yml
chrome/browser/resources/settings/grazie_page/: BUILD.gn  grazie_page.html  grazie_page.ts
chrome/browser/resources/side_panel/grazie/: BUILD.gn  grazie.css  grazie.html
chrome/browser/ui/views/side_panel/grazie/: grazie_coordinator.cc  grazie_coordinator.h
chrome/browser/ui/webui/side_panel/grazie/: BUILD.gn  grazie_ui.cc  grazie_ui.h
patches/grazie/: complete-grazie-integration.patch  grazie-coordinator-integration.patch  grazie-feature-flag.patch
resources/files/grazie/: grazie_client.js  test.html
