import("//chrome/common/features.gni")
import("//tools/grit/grit_rule.gni")
import("//tools/grit/preprocess_if_expr.gni")
import("//ui/webui/resources/tools/generate_grd.gni")

assert(is_chromeos_ash || is_chromeos_lacros || is_linux || is_mac || is_win)

preprocess_folder = "preprocessed"
preprocess_manifest = "preprocessed_manifest.json"

generate_grd("build_grd") {
  grd_prefix = "grazie"
  out_grd = "$target_gen_dir/resources.grd"
  input_files = [
    "grazie.html",
    "grazie.css",
  ]
  input_files_base_dir = rebase_path(".", "//")
  deps = [ ":preprocess" ]
  manifest_files = [ "$target_gen_dir/$preprocess_manifest" ]
}

preprocess_if_expr("preprocess") {
  in_folder = "."
  out_folder = "$target_gen_dir/$preprocess_folder"
  out_manifest = "$target_gen_dir/$preprocess_manifest"
  in_files = [
    "grazie.html",
    "grazie.css",
  ]
}

grit("resources") {
  defines = chrome_grit_defines

  # These arguments are needed since the grd is generated at build time.
  enable_input_discovery_for_gn_analyze = false
  source = "$target_gen_dir/resources.grd"
  deps = [ ":build_grd" ]

  outputs = [
    "grit/grazie_resources.h",
    "grit/grazie_resources_map.cc",
    "grit/grazie_resources_map.h",
    "grazie_resources.pak",
  ]
  output_dir = "$root_gen_dir/chrome"
} 